Language: add missing variable - refs BT#22741

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -1123,5 +1123,6 @@
     "Updated": "Aktualisiert",
     "Explore more courses": "Erkunden Sie weitere Kurse",
     "Sessions catalogue": "Sessionskatalog",
+    "Root": "Wurzel",
     "Videoconference": "Video-Konferenz"
 }
