--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1124,5 +1124,6 @@
     "Updated": "Updated",
     "Explore more courses": "Explore more courses",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Root",
     "Videoconference": "Videoconference"
 }
