--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1123,5 +1123,6 @@
     "Updated": "\u00daltima modificaci\u00f3n",
     "Explore more courses": "Explorar m\u00e1s cursos",
     "Sessions catalogue": "Cat\u00e1logo de sesiones",
+    "Root": "Ra\u00edz",
     "Videoconference": "Videoconferencia"
 }
