--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -1123,5 +1123,6 @@
     "Updated": "Mise \u00e0 jour enregistr\u00e9e",
     "Explore more courses": "Explorer plus de cours",
     "Sessions catalogue": "Catalogue de sessions",
+    "Root": "Racine",
     "Videoconference": "Vid\u00e9oconf\u00e9rence"
 }
