--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -1102,5 +1102,6 @@
     "Updated": "\u05e2\u05d5\u05d3\u05db\u05df",
     "Explore more courses": "\u05d7\u05e7\u05d5\u05e8 \u05e7\u05d5\u05e8\u05e1\u05d9\u05dd \u05e0\u05d5\u05e1\u05e4\u05d9\u05dd",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "\u05e9\u05d5\u05e8\u05e9",
     "Videoconference": "\u05d5\u05e2\u05d9\u05d3\u05ea \u05d5\u05d9\u05d3\u05d0\u05d5"
 }
