--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -1123,5 +1123,6 @@
     "Updated": "ge\u00fcpdatete",
     "Explore more courses": "Verken meer cursussen",
     "Sessions catalogue": "Catalogus van sessies",
+    "Root": "Root",
     "Videoconference": "Videoconferentie"
 }
