--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -1041,5 +1041,6 @@
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "Actualizado",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Raiz",
     "Videoconference": "Videoconfer\u00eancia"
 }
