--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -1044,5 +1044,6 @@
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "Ultima modificare",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "R\u0103d\u0103cin\u0103",
     "Videoconference": "Videoconferinta"
 }
