--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -1110,5 +1110,6 @@
     "Updated": "Datum zadnje spremembe",
     "Explore more courses": "Razi\u0161\u010di ve\u010d te\u010dajev",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Koren",
     "Videoconference": "Videokonferenca"
 }
