--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -1064,5 +1064,6 @@
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "\u00daltima modificaci\u00f3",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Arrel",
     "Videoconference": "Videoconfer\u00e8ncia"
 }
