--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -1026,5 +1026,6 @@
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "Azken aldaketa",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Erroa",
     "Videoconference": "Bideokonferentzia"
 }
