--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -1076,5 +1076,6 @@
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "Aggiorna la data",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Radice",
     "Videoconference": "Videoconferenza"
 }
