--- a/assets/locales/oc.json
+++ b/assets/locales/oc.json
@@ -1123,5 +1123,6 @@
     "Updated": "Updated",
     "Explore more courses": "Explore more courses",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Root",
     "Videoconference": "Videoconference"
 }
