--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -1062,5 +1062,6 @@
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Updated": "D\u00e1tum aktualiz\u00e1cie",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Kore\u0148",
     "Videoconference": "Videokonferencia"
 }
