--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -30701,3 +30701,168 @@ msgstr ""
 
 msgid "Already logged in"
 msgstr ""
+
+msgid "GDPR compliance"
+msgstr ""
+
+msgid "Azure UID (internal ID)"
+msgstr ""
+
+msgid "Azure ID (mailNickname)"
+msgstr ""
+
+msgid "Organisation e-mail"
+msgstr ""
+
+msgid "UID"
+msgstr ""
+
+msgid "Office phone extension"
+msgstr ""
+
+msgid "Office address"
+msgstr ""
+
+msgid "Number of days for completion"
+msgstr ""
+
+msgid "Event notifications"
+msgstr ""
+
+msgid "Skip automatic validation"
+msgstr ""
+
+msgid "Use alternate tracking system"
+msgstr ""
+
+msgid "My terms"
+msgstr ""
+
+msgid "Moodle password"
+msgstr ""
+
+msgid "Long term authentication request token used"
+msgstr ""
+
+msgid "Is from new login"
+msgstr ""
+
+msgid "End pause date"
+msgstr ""
+
+msgid "Downloaded at"
+msgstr ""
+
+msgid "Disable import calendar"
+msgstr ""
+
+msgid "Disable all emails"
+msgstr ""
+
+msgid "Differentiation"
+msgstr ""
+
+msgid "Credentials type"
+msgstr ""
+
+msgid "Collapsed"
+msgstr ""
+
+msgid "Career diagram"
+msgstr ""
+
+msgid "Career URLs"
+msgstr ""
+
+msgid "Career ID"
+msgstr ""
+
+msgid "CAS user"
+msgstr ""
+
+msgid "Buyer's address"
+msgstr ""
+
+msgid "Buyer's VAT/Tax ID"
+msgstr ""
+
+msgid "Buyer's company"
+msgstr ""
+
+msgid "Block Category"
+msgstr ""
+
+msgid "Authentication method"
+msgstr ""
+
+msgid "Authentication date"
+msgstr ""
+
+msgid "Ask for new password"
+msgstr ""
+
+msgid "Ask for revision"
+msgstr ""
+
+msgid "Advanced courses list"
+msgstr ""
+
+msgid "User address"
+msgstr ""
+
+msgid "Considered working time"
+msgstr ""
+
+msgid "Send to coaches"
+msgstr ""
+
+msgid "In multiple languages"
+msgstr ""
+
+msgid "Show in catalogue"
+msgstr ""
+
+msgid "Is mandatory"
+msgstr ""
+
+msgid "Lock course in session"
+msgstr ""
+
+msgid "Send to users in session"
+msgstr ""
+
+msgid "Date to send notification"
+msgstr ""
+
+msgid "Send notification at a specific date"
+msgstr ""
+
+msgid "Notify of group messages by email"
+msgstr ""
+
+msgid "Notify of messages by email"
+msgstr ""
+
+msgid "Notify of invitations by email"
+msgstr ""
+
+msgid "Account locked until"
+msgstr ""
+
+msgid "Google Calendar URL"
+msgstr ""
+
+msgid "User chat status"
+msgstr ""
+
+msgid "Update script type"
+msgstr ""
+
+msgid "My test conditions"
+msgstr ""
+
+msgid "GDPR"
+msgstr ""
+
+msgid "2FA activated successfully."
+msgstr ""
