Language: Update language terms

--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -1109,5 +1109,6 @@
     "Updated": "Atualizado",
     "Explore more courses": "Explore mais cursos",
     "Sessions catalogue": "Sessions catalogue",
+    "Root": "Raiz",
     "Videoconference": "Videoconfer\u00eancia"
 }
